# zkOracles

./: .env.example  Cargo.toml  README.md  succinct.json
circuits/: mock.rs  v1.rs
script/: TestMulticalls.s.sol  deploy_oracle.sh
src/: ZkOracle.sol  ZkState.sol  ZkTVL.sol
src/interfaces/: IFunctionGateway.sol  IStETH.sol
